fix all the things

--- a/2.html
+++ b/2.html
@@ -1,4 +1,4 @@
-<!doctypr html>
+<!doctype html>
 <html>
 <head>
 <title>바둑 규칙</title>
@@ -15,6 +15,6 @@
 일단 놓인 수는 무르거나 움직일 수 없다. ...
 집(家)을 많이 지은 쪽이 이긴다
 <br><a href="https://www.youtube.com/watch?v=-ezZ1Aavv-I" target="_blank">바둑 규칙 설명 영상</a>
-<h6><a href="5.html">home</a></h6>
+<h6><a href="index.html">home</a></h6>
 </body>
 </html> 
