--- a/4.html
+++ b/4.html
@@ -1,4 +1,4 @@
-<!doctypr html>
+<!doctype html>
 <html>
 <head>
 <title>바둑 역사</title>
@@ -14,6 +14,6 @@
 그런가 하면 《설문(說文)》에는 기원전 2200년경 순왕이 우매한 아들에게 바둑을 만들어 가르쳤다고 밝히고 있으며, 《중흥서(中 興書)》에도 '요순이교우자야(堯舜以敎愚子也)'라는 글이 전해지고 있다.
 그러나 이렇듯 내용 자체가 다분히 전설적인데다 구체적이지 못해서 이 '요순창시설'의 사실적 근거가 확실하다고 보기는 어렵 다 . 사실 '어리석은 아들'이라면 바둑을 배우는 것 자체가 쉽지 않았을 것이라는 모순성을 내포하고 있기 때문이다.
 <br><a href="https://www.youtube.com/watch?v=NhyOGtGO1zM" target="blank">바둑 역사 동영상</a>
-<h6><a href="5.html">home</a></h6>
+<h6><a href="index.html">home</a></h6>
 </body>
 </html>
