--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctypr html>
+<!doctype html>
 <html>
 <head>
 <title>바둑</title>
@@ -12,6 +12,6 @@
 <br>
 <br><img src="go.jpg" width="300">
 <h2>한성사전</h2>
-<h6><a href="5.html">home</a></h6>
+<h6><a href="index.html">home</a></h6>
 </body>
 </html>
